// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal Add and remove portals 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 Portal\`);
    const b6 = text(ctx['portalId']);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    ctx = Object.create(ctx);
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['portalIds']);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      ctx[\`portalId\`] = v_block3[i1];
      const key1 = ctx['portalId'];
      const ctx1 = capture(ctx);
      c_block3[i1] = withKey(comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal), key1);
    }
    const b3 = list(c_block3);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal Add and remove portals on div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block4 = createBlock(\`<div>
 Portal<block-text-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    let txt1 = ctx['portalId'];
    return block4([txt1]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    ctx = Object.create(ctx);
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['portalIds']);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      ctx[\`portalId\`] = v_block3[i1];
      const key1 = ctx['portalId'];
      const ctx1 = capture(ctx);
      c_block3[i1] = withKey(comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal), key1);
    }
    const b3 = list(c_block3);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal Add and remove portals with t-foreach 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block6 = createBlock(\`<div>
 <block-text-0/>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b8 = text(\`
 Portal\`);
    const b9 = text(ctx['portalId']);
    const b10 = text(\`
 \`);
    return multi([b8, b9, b10]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    ctx = Object.create(ctx);
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['portalIds']);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      ctx[\`portalId\`] = v_block3[i1];
      const key1 = ctx['portalId'];
      const b5 = text(\`
 \`);
      let txt1 = ctx['portalId'];
      const ctx1 = capture(ctx);
      const b11 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal);
      const b6 = block6([txt1], [b11]);
      const b12 = text(\`
 \`);
      c_block3[i1] = withKey(multi([b5, b6, b12]), key1);
    }
    const b3 = list(c_block3);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal Add and remove portals with t-foreach and destroy 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block6 = createBlock(\`<div>
 <block-text-0/>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b8 = text(\`
 Portal\`);
    const b9 = text(ctx['portalId']);
    const b10 = text(\`
 \`);
    return multi([b8, b9, b10]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    ctx = Object.create(ctx);
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['portalIds']);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      ctx[\`portalId\`] = v_block3[i1];
      const key1 = ctx['portalId'];
      const b5 = text(\`
 \`);
      let txt1 = ctx['portalId'];
      const ctx1 = capture(ctx);
      const b11 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal);
      const b6 = block6([txt1], [b11]);
      const b12 = text(\`
 \`);
      c_block3[i1] = withKey(multi([b5, b6, b12]), key1);
    }
    const b3 = list(c_block3);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal Add and remove portals with t-foreach inside div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block7 = createBlock(\`<div>
 <block-text-0/>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b9 = text(\`
 Portal\`);
    const b10 = text(ctx['portalId']);
    const b11 = text(\`
 \`);
    return multi([b9, b10, b11]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    ctx = Object.create(ctx);
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['portalIds']);;
    for (let i1 = 0; i1 < l_block4; i1++) {
      ctx[\`portalId\`] = v_block4[i1];
      const key1 = ctx['portalId'];
      const b6 = text(\`
 \`);
      let txt1 = ctx['portalId'];
      const ctx1 = capture(ctx);
      const b12 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal);
      const b7 = block7([txt1], [b12]);
      const b13 = text(\`
 \`);
      c_block4[i1] = withKey(multi([b6, b7, b13]), key1);
    }
    ctx = ctx.__proto__;
    const b4 = list(c_block4);
    const b3 = block3([], [b4]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal Portal composed with t-slot 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { markRaw } = helpers;
  const comp1 = app.createComponent(\`Child2\`, true, false, false, false);
  const comp2 = app.createComponent(\`Child\`, true, true, false, true);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = comp1({customHandler: ctx['_handled']}, key + \`__1\`, node, this, null);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp2({slots: markRaw({'default': {__render: slot1, __ctx: ctx}})}, key + \`__2\`, node, this, null);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal Portal composed with t-slot 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  function slot1(ctx, node, key = \\"\\") {
    const b4 = text(\`
 \`);
    const b5 = callSlot(ctx, node, key, 'default', false, {});
    const b6 = text(\`
 \`);
    return multi([b4, b5, b6]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b7 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    return multi([b2, b7]);
  }
}"
`;

exports[`Portal Portal composed with t-slot 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div block-handler-0=\\"custom\\"><span id=\\"childSpan\\">child2</span></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let hdlr1 = [ctx['onCustom'], ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`Portal basic use of portal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <span>1</span>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal basic use of portal in dev mode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <span>1</span>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal basic use of portal on div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <span>1</span>
 <block-child-0/>
 </div>\`);
  let block4 = createBlock(\`<div>
 <p>2</p>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    return block4();
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b5 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b5]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal basic use of portal, variation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <span>1</span>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: ctx['target'],slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal conditional use of Portal (with sub Component) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(\`Child\`, true, false, false, false);
  const comp2 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<span>1</span>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b6 = text(\`
 \`);
    const b7 = comp1({val: ctx['state'].val}, key + \`__1\`, node, this, null);
    const b8 = text(\`
 \`);
    return multi([b6, b7, b8]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3,b4,b9;
    b2 = text(\`
 \`);
    b3 = block3();
    b4 = text(\`
 \`);
    if (ctx['state'].hasPortal) {
      b9 = comp2({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__2\`, node, ctx, Portal);
    }
    return multi([b2, b3, b4, b9]);
  }
}"
`;

exports[`Portal conditional use of Portal (with sub Component) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<p><block-text-0/></p>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let txt1 = ctx['props'].val;
    return block1([txt1]);
  }
}"
`;

exports[`Portal conditional use of Portal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<span>1</span>\`);
  let block7 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b6 = text(\`
 \`);
    const b7 = block7();
    const b8 = text(\`
 \`);
    return multi([b6, b7, b8]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3,b4,b9;
    b2 = text(\`
 \`);
    b3 = block3();
    b4 = text(\`
 \`);
    if (ctx['state'].hasPortal) {
      b9 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    }
    return multi([b2, b3, b4, b9]);
  }
}"
`;

exports[`Portal conditional use of Portal with child and div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, false, true);
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    b2 = text(\`
 \`);
    if (ctx['state'].hasPortal) {
      const b4 = text(\`
 \`);
      const b5 = comp1({}, key + \`__1\`, node, this, null);
      const b6 = text(\`
 \`);
      b3 = multi([b4, b5, b6]);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal conditional use of Portal with child and div 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block1 = createBlock(\`<div><span>hasPortal</span><block-child-0/></div>\`);
  let block3 = createBlock(\`<p>thePortal</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    return block3();
  }
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([1]);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      ctx[\`elem\`] = v_block2[i1];
      const key1 = ctx['elem'];
      const ctx1 = capture(ctx);
      c_block2[i1] = withKey(comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`Portal conditional use of Portal with child and div, variation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Child\`, true, false, false, true);
  
  let block5 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    b2 = text(\`
 \`);
    if (ctx['state'].hasPortal) {
      const b4 = text(\`
 \`);
      const b6 = comp1({}, key + \`__1\`, node, this, null);
      const b5 = block5([], [b6]);
      const b7 = text(\`
 \`);
      b3 = multi([b4, b5, b7]);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal conditional use of Portal with child and div, variation 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, capture, withKey } = helpers;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block2 = createBlock(\`<span>hasPortal</span>\`);
  let block4 = createBlock(\`<p>thePortal</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    return block4();
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = block2();
    ctx = Object.create(ctx);
    const [k_block3, v_block3, l_block3, c_block3] = prepareList([1]);;
    for (let i1 = 0; i1 < l_block3; i1++) {
      ctx[\`elem\`] = v_block3[i1];
      const key1 = ctx['elem'];
      const ctx1 = capture(ctx);
      c_block3[i1] = withKey(comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx1}}}, key + \`__1__\${key1}\`, node, ctx, Portal), key1);
    }
    const b3 = list(c_block3);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal conditional use of Portal with div 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block5 = createBlock(\`<div>
 <span>hasPortal</span>
 <block-child-0/>
 </div>\`);
  let block8 = createBlock(\`<p>thePortal</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b7 = text(\`
 \`);
    const b8 = block8();
    const b9 = text(\`
 \`);
    return multi([b7, b8, b9]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    let b2,b3;
    b2 = text(\`
 \`);
    if (ctx['state'].hasPortal) {
      const b4 = text(\`
 \`);
      const b10 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
      const b5 = block5([], [b10]);
      const b11 = text(\`
 \`);
      b3 = multi([b4, b5, b11]);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal lifecycle hooks of portal sub component are properly called 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(\`Child\`, true, false, false, false);
  const comp2 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/><block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = comp1({val: ctx['state'].val}, key + \`__1\`, node, this, null);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    let b8;
    if (ctx['state'].hasChild) {
      b8 = comp2({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__2\`, node, ctx, Portal);
    }
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal lifecycle hooks of portal sub component are properly called 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<span><block-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let txt1 = ctx['props'].val;
    return block1([txt1]);
  }
}"
`;

exports[`Portal portal could have dynamically no content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<span><block-text-0/></span>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    let b5,b6,b7;
    b5 = text(\`
 \`);
    if (ctx['state'].val) {
      let txt1 = ctx['state'].val;
      b6 = block6([txt1]);
    }
    b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal destroys on crash 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(\`Child\`, true, false, false, false);
  const comp2 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = comp1({error: ctx['state'].error}, key + \`__1\`, node, this, null);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp2({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__2\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal destroys on crash 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<span><block-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let txt1 = ctx['props'].error&&this.will.crash;
    return block1([txt1]);
  }
}"
`;

exports[`Portal portal with child and props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(\`Child\`, true, false, false, false);
  const comp2 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = comp1({val: ctx['state'].val}, key + \`__1\`, node, this, null);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp2({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__2\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal with child and props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<span><block-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let txt1 = ctx['props'].val;
    return block1([txt1]);
  }
}"
`;

exports[`Portal portal with dynamic body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<span><block-text-0/></span>\`);
  let block7 = createBlock(\`<div/>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    let b5,b6,b7,b8;
    b5 = text(\`
 \`);
    if (ctx['state'].val) {
      let txt1 = ctx['state'].val;
      b6 = block6([txt1]);
    } else {
      b7 = block7();
    }
    b8 = text(\`
 \`);
    return multi([b5, b6, b7, b8]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b9 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b9]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal with many children 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<div>1</div>\`);
  let block8 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    const b8 = block8();
    const b9 = text(\`
 \`);
    return multi([b5, b6, b7, b8, b9]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b10 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b10]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal with no content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    let b5,b6,b7;
    b5 = text(\`
 \`);
    if (false) {
      b6 = text('ABC');
    }
    b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal with only text as content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = text('only text');
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal with target not in dom 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<div>2</div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#does-not-exist',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal's parent's env is not polluted 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(\`Child\`, true, false, false, true);
  const comp2 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = comp1({}, key + \`__1\`, node, this, null);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp2({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__2\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal portal's parent's env is not polluted 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block3 = createBlock(\`<button>child</button>\`);
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b3 = block3();
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal simple catchError with portal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`Boom\`, true, false, false, true);
  
  let block3 = createBlock(\`<div>
 <block-child-0/><block-child-1/>
 </div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    let b4,b5;
    if (ctx['error']) {
      b4 = text(\`Error\`);
    } else {
      const b6 = text(\`
 \`);
      const b7 = comp1({}, key + \`__1\`, node, this, null);
      const b8 = text(\`
 \`);
      b5 = multi([b6, b7, b8]);
    }
    const b3 = block3([], [b4, b5]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal simple catchError with portal 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <span>1</span>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<p><block-text-0/></p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    let txt1 = ctx['a'].b.c;
    const b6 = block6([txt1]);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal with target in template (after portal) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <span>1</span>
 <block-child-0/>
 <div id=\\"local-target\\"/>
 </div>\`);
  let block6 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#local-target',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal with target in template (before portal) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <div id=\\"local-target\\"/>
 <span>1</span>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<p>2</p>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: '#local-target',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal: Props validation target must be a valid selector 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<div>2</div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: ' ',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal: Props validation target must be a valid selector 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  let block6 = createBlock(\`<div>2</div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = block6();
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp1({target: 'aa',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__1\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal: UI/UX focus is kept across re-renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const Portal = app.Portal;
  const comp1 = app.createComponent(\`Child\`, true, false, false, false);
  const comp2 = app.createComponent(null, false, true, false, false);
  
  let block3 = createBlock(\`<div>
 <block-child-0/>
 </div>\`);
  
  function slot1(ctx, node, key = \\"\\") {
    const b5 = text(\`
 \`);
    const b6 = comp1({val: ctx['state'].val}, key + \`__1\`, node, this, null);
    const b7 = text(\`
 \`);
    return multi([b5, b6, b7]);
  }
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    const b8 = comp2({target: '#outside',slots: {'default': {__render: slot1, __ctx: ctx}}}, key + \`__2\`, node, ctx, Portal);
    const b3 = block3([], [b8]);
    return multi([b2, b3]);
  }
}"
`;

exports[`Portal: UI/UX focus is kept across re-renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block3 = createBlock(\`<input id=\\"target-me\\" block-attribute-0=\\"placeholder\\"/>\`);
  
  return function template(ctx, node, key = \\"\\") {
    const b2 = text(\`
 \`);
    let attr1 = ctx['props'].val;
    const b3 = block3([attr1]);
    return multi([b2, b3]);
  }
}"
`;
